--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,9 +2,10 @@
     height: 13rem;
     display: flex;
     flex-wrap: nowrap;
-    width: 100%;
+    width: 100vw;
     text-align: center;
     flex-direction: row;
+    border-bottom: 0.5px solid lightgrey;
   }
   #header a{
     padding: 0.5rem;
