--- a/src/global/global.css
+++ b/src/global/global.css
@@ -13,6 +13,7 @@ html, body{
   color: var(--font);
   height: 100%;
   background-color:var(--bg-main);
+  overflow-x: hidden;
 }
 
 a:link { text-decoration: none; }
