add imp and daten

--- a/src/components/content-area/content-area.css
+++ b/src/components/content-area/content-area.css
@@ -110,5 +110,25 @@
   #Coaches{
     color: orange;
     font-size: 25px;
+    flex-direction: row;
+    display: flex;
+    margin-left: 17rem;
   }  
+  #Coaches div{
+    margin-left: 11rem;
+    flex-direction: row;
+   
+  }
 
+  #jendrik{
+    display: flex;
+    margin-left: 8rem;
+  }
+
+  #datenschutz{
+    margin-left: 2rem;
+    font-size: 12px;
+    overflow-x: hidden;
+  }
+
+  
